--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "webpack-cli": "^4.1.0"
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^17.0.1"
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "css-loader": "^5.0.0",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "style-loader": "^2.0.0"
   }
 }
