--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.11.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
+    "react-beautiful-dnd": "^13.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.1.0"
   },
