--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.0.6",
     "babel-polyfill": "^6.26.0",
     "react-beautiful-dnd": "^13.0.0",
+    "styled-components": "^5.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.1.0"
   },
